--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@custom-variant dark (&:is(.dark *));
+@custom-variant light (&:is(.light *));
 
 @theme inline {
   --color-background: var(--background);
@@ -76,6 +76,25 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  --primary01: #142264;
+  --primary02: #273781;
+  --primary03: #5a6cc0;
+  --secondary01: #e4d547;
+  --secondary02: #dcd277;
+  --secondary03: #f6efae;
+  --brown01: #b2ab9e;
+  --brown02: #e3e0cb;
+  --brown03: #f4f2e2;
+  --white00: #ffffff;
+  --white01: #fefff8;
+  --white02: #f8f8f8;
+  --white03: #f3f3f3;
+  --white04: #e5e5e5;
+  --black01: #121314;
+  --black02: #1e1e1e;
+  --black03: #3a3a3a;
+  --black04: #cccccc;
 }
 
 .dark {
@@ -110,10 +129,31 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+
+  --primary01: #142264;
+  --primary02: #273781;
+  --primary03: #5a6cc0;
+  --secondary01: #e4d547;
+  --secondary02: #dcd277;
+  --secondary03: #f6efae;
+  --brown01: #b2ab9e;
+  --brown02: #e3e0cb;
+  --brown03: #f4f2e2;
+  --white00: #ffffff;
+  --white01: #fefff8;
+  --white02: #f8f8f8;
+  --white03: #f3f3f3;
+  --white04: #e5e5e5;
+  --black01: #121314;
+  --black02: #1e1e1e;
+  --black03: #3a3a3a;
+  --black04: #cccccc;
 }
 
 .light {
-  --background: oklch(0.145 0 0);
+  --background: #ffffff;
+  /* --background: oklch(0.145 0 0); */
+
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
@@ -144,6 +184,25 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+
+  --primary01: #142264;
+  --primary02: #273781;
+  --primary03: #5a6cc0;
+  --secondary01: #e4d547;
+  --secondary02: #dcd277;
+  --secondary03: #f6efae;
+  --brown01: #b2ab9e;
+  --brown02: #e3e0cb;
+  --brown03: #f4f2e2;
+  --white00: #ffffff;
+  --white01: #fefff8;
+  --white02: #f8f8f8;
+  --white03: #f3f3f3;
+  --white04: #e5e5e5;
+  --black01: #121314;
+  --black02: #1e1e1e;
+  --black03: #3a3a3a;
+  --black04: #cccccc;
 }
 
 @layer base {
